# $Id: Makefile.am,v 1.1 2013-07-16 11:41:33 diemo Exp $
#
# SDIF/iosbuild/Makefile.am	
#
# just to include Mac Xcode project to source distribution
#
# $Log: not supported by cvs2svn $


SUBDIRS		=  SDIF-lib-ios.xcodeproj

# distdir		= $(PACKAGE)-$(VERSION)-src

# more files to include in dist
EXTRA_DIST 	= SDIF-lib-ios-Prefix.pch 

all:
		echo "Use Apple build tools to build for iOS"
