# $Id: Makefile.am,v 1.1 2013-07-16 11:41:33 diemo Exp $
#
# SDIF/iosbuild/....xcodeproj/Makefile.am	
#
# just to include xcode project to source distribution
#
# $Log: not supported by cvs2svn $

# distdir		= ../../$(PACKAGE)-$(VERSION)-src

# more files to include in dist
EXTRA_DIST 	= project.pbxproj

all:
		echo "Use Xcode to build for iOS"
