# $Id: Makefile.am,v 1.2 2013-07-16 11:41:33 diemo Exp $
#
# SDIF/macosxbuild/SDIF.xcodeproj/Makefile.am	
#
# just to include Mac xcode compilation project to source
# distribution
#
# $Log: not supported by cvs2svn $
# Revision 1.1  2009/02/18 14:02:57  diemo
# empty makefile just to include Mac xcode compilation project in source distribution
#

# distdir		= ../../$(PACKAGE)-$(VERSION)-src

# more files to include in dist
EXTRA_DIST 	= project.pbxproj

all:
		echo "Use Xcode to build for Mac OS X"
